RESOLVED FIXED229480
removeFromTopLayer shouldn't be called in every removal of an element
https://bugs.webkit.org/show_bug.cgi?id=229480
Summary removeFromTopLayer shouldn't be called in every removal of an element
Ryosuke Niwa
Reported 2021-08-24 17:07:39 PDT
removeFromTopLayer shouldn't be called in every removal of an element
Attachments
Move the call to HTMLDialogElement (2.91 KB, patch)
2021-08-24 17:09 PDT, Ryosuke Niwa
ews-feeder: commit-queue-
Move the call to HTMLDialogElement (2.90 KB, patch)
2021-08-24 17:21 PDT, Ryosuke Niwa
no flags
Ryosuke Niwa
Comment 1 2021-08-24 17:09:39 PDT
Created attachment 436350 [details] Move the call to HTMLDialogElement
Ryosuke Niwa
Comment 2 2021-08-24 17:21:52 PDT
Created attachment 436351 [details] Move the call to HTMLDialogElement
Simon Fraser (smfr)
Comment 3 2021-08-24 17:31:14 PDT
Comment on attachment 436351 [details] Move the call to HTMLDialogElement View in context: https://bugs.webkit.org/attachment.cgi?id=436351&action=review > Source/WebCore/ChangeLog:9 > + the only place where top layer is currenlty used. "currenlty"
Ryosuke Niwa
Comment 4 2021-08-24 17:48:53 PDT
(In reply to Simon Fraser (smfr) from comment #3) > Comment on attachment 436351 [details] > Move the call to HTMLDialogElement > > View in context: > https://bugs.webkit.org/attachment.cgi?id=436351&action=review > > > Source/WebCore/ChangeLog:9 > > + the only place where top layer is currenlty used. > > "currenlty" Fixed. Thanks.
Ryosuke Niwa
Comment 5 2021-08-24 23:07:06 PDT
Comment on attachment 436351 [details] Move the call to HTMLDialogElement Clearing flags on attachment: 436351 Committed r281548 (240915@main): <https://commits.webkit.org/240915@main>
Ryosuke Niwa
Comment 6 2021-08-24 23:07:09 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7 2021-08-24 23:08:17 PDT
Note You need to log in before you can comment on or make changes to this bug.