removeFromTopLayer shouldn't be called in every removal of an element https://bugs.webkit.org/show_bug.cgi?id=229480

Reviewed by Simon Fraser.

Call it in HTMLDialogElement::removedFromAncestor for now since that's
the only place where top layer is currenlty used.

* dom/Element.cpp:
(WebCore::Element::removedFromAncestor):
* html/HTMLDialogElement.cpp:
(WebCore::HTMLDialogElement::removedFromAncestor): Added.
* html/HTMLDialogElement.h:


Canonical link: https://commits.webkit.org/240915@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@281548 268f45cc-cd09-0410-ab3c-d52691b4dbfc